Utworzono za pomocą Colab

--- a/Automatic.ipynb
+++ b/Automatic.ipynb
@@ -29,12 +29,13 @@
       "metadata": {
         "id": "qUxndvbp3Pss"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "import datetime\n",
         "import os\n",
         "import json\n",
         "\n",
@@ -63,22 +64,23 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 216
+          "height": 251
         },
         "id": "3R_qJd3V3Pqp",
-        "outputId": "90a9b2a9-d2a9-405e-d3b2-de69e4e8efc9"
+        "outputId": "a561355a-6f09-4546-a783-18c0f396567d"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'json' is not defined",
+          "ename": "KeyError",
+          "evalue": "'GOOGLE_CREDENTIALS'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-2a7bdd08357c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Pobierz zmienną środowiskową z kluczem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcredentials_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'GOOGLE_CREDENTIALS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Utwórz poświadczenia z pliku JSON\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-2a7bdd08357c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Pobierz zmienną środowiskową z kluczem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcredentials_info\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'GOOGLE_CREDENTIALS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Utwórz poświadczenia z pliku JSON\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.11/os.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'GOOGLE_CREDENTIALS'"
           ]
         }
       ]
@@ -173,29 +175,16 @@
         "    print(f\"✅ Utworzono plik: {filename} w folderze '{folder_name}' (ID: {uploaded_file.get('id')})\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ndrnrJBl9kfT",
-        "outputId": "bed07f97-627d-4dc3-b0ce-3e6b21bb5f9c"
+        "id": "ndrnrJBl9kfT"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Znaleziono folder 'OLX Scrap', ID: 1n9gkX5Fqf-fOR65tK-Go76jR14SpI9Vc\n",
-            "✅ Utworzono plik: test-2025-02-22_09-11-04.csv w folderze 'OLX Scrap' (ID: 1nilVvUjL64jUc_k23-BKXcWxL7sOhfF7)\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOItzjxvMzc6Wx+uNybun2H"
+      "authorship_tag": "ABX9TyOpIu7PBzQZsMRTk+A9TOOO"
     },
     "kernelspec": {
       "display_name": "Python 3",
